@@ -1,7 +1,6 @@
 package com.gebel.threelayerarchitecture.business.service.converter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Component;
@@ -32,7 +31,7 @@ public class DomainBrandConverter {
 		return CollectionUtils.emptyIfNull(carBrandsModels)
 			.stream()
 			.map(this::toDomain)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 }
