@@ -1,7 +1,6 @@
 package com.gebel.threelayerarchitecture.business.service.converter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Component;
@@ -33,7 +32,7 @@ public class DomainCarConverter {
 		return CollectionUtils.emptyIfNull(entitiesCars)
 			.stream()
 			.map(this::toDomain)
-			.collect(Collectors.toList());
+			.toList();
 	}
 	
 	public CarEntity toEntity(Car domainCar) {
