@@ -1,7 +1,6 @@
 package com.gebel.threelayerarchitecture.controller.api.v2.converter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Component;
@@ -29,7 +28,7 @@ public class V2ApiBrandConverter {
 		return CollectionUtils.emptyIfNull(domainBrands)
 			.stream()
 			.map(this::toDto)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 }
